kubernetes/resources/ingressroute/db-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  # annotations:
  #   kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
    # - web
  routes:
    # - match: Host(`traefik.local.elepnt.com`) && Path(`/dashboard`)
    - match: Host(`traefik.local.elepnt.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: local-elepnt-com-tls
    # secretName: self-signed-ca-secret
